--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -40,5 +40,7 @@ jobs:
         restore-keys: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-mix-
     - name: Install dependencies
       run: mix deps.get
+    - name: Compile
+      run: mix compile --warnings-as-errors
     - name: Run tests
       run: mix test
