--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         include:
-          - elixir: 1.10
+          - elixir: "1.10"
             otp: 21.3
           - elixir: 1.11
             otp: 21.3
